fixed invisible input

--- a/website/static/style.css
+++ b/website/static/style.css
@@ -25,11 +25,6 @@ p {
     margin: auto;
     padding: 0.5rem;
 }
-a,
-input,
-label {
-    color: white;
-}
 table {
     width: 100%;
 }
